# bazel-module-example

./: .gitignore  README.md
example/: BUILD.bazel  WORKSPACE.bazel  example.js  package.json
print-dir/: index.js  package.json
